--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "deploy": "nuxt build && npm start"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
